:zap: Use new Record class type for data classes
Changed target java version to 14